fix: fix banner size on small screens

--- a/src/app/portfolio/components/main-banner/main-banner.component.scss
+++ b/src/app/portfolio/components/main-banner/main-banner.component.scss
@@ -95,6 +95,12 @@ h6 {
 }
 
 @media screen and (max-width: 1024px) {
+  section {
+    background-size: cover;
+    background-position: right;
+    background-repeat: no-repeat;
+  }
+
   .contact-container {
     position: relative;
     display: flex;
